# lab6_Skylar_Tyler

./: README.md
.cache/clangd/index/: FreeRTOS.h.6E521845F108D310.idx  FreeRTOS.h.FA1D01ACA744C75B.idx  FreeRTOSConfig.h.101176263D76340E.idx  FreeRTOSConfig.h.7A236D1B6B3F4DB3.idx  FreeRTOSConfig_examples_common.h.2207211469414FDF.idx  FreeRTOSConfig_examples_common.h.DB3CC7A84AE6E6A5.idx  croutine.c.369B1C5E3C0665BD.idx  croutine.c.D56EC705A196370D.idx  croutine.h.303100D7C6640DDA.idx  croutine.h.7073BC2F97E7B511.idx  deprecated_definitions.h.4A9127A4C9A3DF9D.idx  deprecated_definitions.h.50ABFB8400C6653F.idx  event_groups.c.66F08C998CD7C87A.idx  event_groups.c.FDE9BB865D00B5BE.idx  event_groups.h.1E925937F591B8FA.idx  event_groups.h.A136E6D534CF8AD4.idx  freertos_sdk_config.h.08A7172A638FEB3E.idx  freertos_sdk_config.h.70D9D921F5C28086.idx  heap_4.c.A3406291150FAD97.idx  heap_4.c.F62F96C9A21A1DC7.idx  list.c.B2F3E8CFADA99EFF.idx  list.c.DCEA65782A8A12B1.idx  list.h.1D754A332DEC221E.idx  list.h.7D9F3BF75EF20C34.idx  main.c.16296B30C2FC019C.idx  main.c.29EB0AA640114E9D.idx  mpu_wrappers.h.95CF6ACF68F8CF88.idx  mpu_wrappers.h.AD13F8E611095C84.idx  port.c.051C8E8564C8D84F.idx  port.c.B9C9154763BAE3ED.idx  portable.h.22C524D708BB0FF7.idx  portable.h.27B9F973B2E53141.idx  portmacro.h.5B819F2180A70584.idx  portmacro.h.8944F97B1782827F.idx  projdefs.h.658B8395E73B67F6.idx  projdefs.h.C8B864BF90672B20.idx  queue.c.ABD5F8BC196D67C8.idx  (+34 more)
include/: FreeRTOSConfig.h
src/: CMakeLists.txt  gpio.c  main.c
test/: CMakeLists.txt  test.c  testSemaBin.c  testlab6.c
(+1 files in other folders)
